Program now builds multiple configurations and multiple platforms and installs correctly with x64. License file was also added.
sxs guid deterministic generation was added using sxs.template.wxs. Will now port the changes to the Ryan_Serialization and Tmatrix projects.


git-svn-id: file:///mnt/svn/ryan-debug@62 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/Ryan_Debug.template.wxs
+++ b/Ryan_Debug.template.wxs
@@ -85,6 +85,7 @@
     <UIRef Id="WixUI_FeatureTree" />
     <UIRef Id="WixUI_ErrorProgressText" />
     <Property Id="WIXUI_INSTALLDIR" Value="INSTALLDIR" />
+    <WixVariable Id="WixUILicenseRtf" Value="license.rtf"/>
 
   </Product>
 </Wix>
