--- a/sxs.template.wxs
+++ b/sxs.template.wxs
@@ -7,14 +7,14 @@
   </Fragment>
   <Fragment>
     <ComponentGroup Id="sxs@configappend@_@p@">
-      <Component Id="sxspolicy@configappend@_@p@" Directory="dirsxs@configappend@_@p@" Guid="*">
+      <Component Id="sxspolicy@configappend@_@p@" Directory="dirsxs@configappend@_@p@" Guid="@sxspolicyguid@">
         <File Id="polcat@MAJOR@_@MINOR@_@ASSEMBLY_NAME@" Vital='yes' Source="$(var.MySource)\policy.@MAJOR@.@MINOR@.@ASSEMBLY_NAME@.cat" />
         <File Id="polman@MAJOR@_@MINOR@_@ASSEMBLY_NAME@" KeyPath="yes" Source="$(var.MySource)\policy.@MAJOR@.@MINOR@.@ASSEMBLY_NAME@.manifest"
               Assembly='win32' Vital='yes'
               AssemblyManifest='polman@MAJOR@_@MINOR@_@ASSEMBLY_NAME@'
               />
       </Component>
-      <Component Id="sxspublic@configappend@_@p@" Directory="dirsxs@configappend@_@p@" Guid="*">
+      <Component Id="sxspublic@configappend@_@p@" Directory="dirsxs@configappend@_@p@" Guid="@sxspublicguid@">
         <File Id="sxscat@ASSEMBLY_NAME@" Vital='yes' KeyPath="no" Source="$(var.MySource)\@ASSEMBLY_NAME@.cat" />
         <File Id="sxsman@ASSEMBLY_NAME@" Vital='yes' KeyPath="no" Source="$(var.MySource)\@ASSEMBLY_NAME@.manifest" />
         <File Id="sxslib@ASSEMBLY_NAME@" KeyPath="yes" Source="$(var.MySource)\@ASSEMBLY_LIB_NAME@"
